test/files/pos/t1840/J.java
package p;
class J { 
  J() {} 
}
