test/files/neg/t13007/J.java
package j;

public class J {
  protected boolean i() { return false; }
  protected boolean j() { return false; }
  public boolean k() { return false; }
}
